# ntuples

./: CMakeLists.txt  LICENSE.txt  README.md  git_commit_size_limit.py
Documentation/: generic_algorithms.md  inheritance.py  overview.md
cmake/: ntuples-config.cmake
core/: CMakeLists.txt
core/include/ntuples/: bind_args.hh  dataframe.hh  generic_algorithms.hh  groupby.hh  macro_ax_maker.hh  macro_comperator.hh  macro_groupby.hh  macro_nt_field.hh  macro_nt_new_axis.hh  macro_nt_new_field.hh  nt_algorithms.hh  nt_erased.hh  nt_vector_erased.hh  ntuples.hh  span.hh  std_adapter.hh  vector_frame.hh
tests/: CMakeLists.txt  test1.cc  test2.cc
